--- a/examples/Serving-Ranking-Models-With-Merlin-Systems.ipynb
+++ b/examples/Serving-Ranking-Models-With-Merlin-Systems.ipynb
@@ -1049,9 +1049,11 @@
     "\n",
     "inputs = convert_df_to_triton_input(workflow.input_schema.column_names, batch, grpcclient.InferInput)\n",
     "\n",
+    "output_cols = ensemble.graph.output_schema.column_names\n",
+    "\n",
     "outputs = [\n",
     "    grpcclient.InferRequestedOutput(col)\n",
-    "    for col in ensemble.graph.output_schema.column_names\n",
+    "    for col in output_cols\n",
     "]"
    ]
   },
@@ -1118,7 +1120,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1132,12 +1134,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
   "merlin": {
    "containers": [
     "nvcr.io/nvidia/merlin/merlin-tensorflow:latest"
    ]
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
