--- a/jupyter_execute/examples/Serving-An-XGboost-Model-With-Merlin-Systems.ipynb
+++ b/jupyter_execute/examples/Serving-An-XGboost-Model-With-Merlin-Systems.ipynb
@@ -28,7 +28,7 @@
    "id": "77acbcad",
    "metadata": {},
    "source": [
-    "<img src=\"http://developer.download.nvidia.com/compute/machine-learning/frameworks/nvidia_logo.png\" style=\"width: 90px; float: right;\">\n",
+    "<img src=\"https://developer.download.nvidia.com/notebooks/dlsw-notebooks/merlin_systems_serving-an-xgboost-model-with-merlin-systems/nvidia_logo.png\" style=\"width: 90px; float: right;\">\n",
     "\n",
     "# Serving an XGBoost Model with Merlin Systems\n",
     "\n",
