Adjust `convert_df_to_triton_input` calls in notebooks

--- a/examples/Serving-An-XGboost-Model-With-Merlin-Systems.ipynb
+++ b/examples/Serving-An-XGboost-Model-With-Merlin-Systems.ipynb
@@ -430,7 +430,7 @@
     "import tritonclient.grpc as grpcclient\n",
     "\n",
     "ten_examples = train.compute().drop(columns=['rating', 'title', 'rating_binary'])[:10]\n",
-    "inputs = convert_df_to_triton_input(inf_workflow.input_schema.column_names, ten_examples, grpcclient.InferInput)\n",
+    "inputs = convert_df_to_triton_input(inf_workflow.input_schema, ten_examples, grpcclient.InferInput)\n",
     "\n",
     "outputs = [\n",
     "    grpcclient.InferRequestedOutput(col)\n",
