--- a/examples/Serving-An-Implicit-Model-With-Merlin-Systems.ipynb
+++ b/examples/Serving-An-Implicit-Model-With-Merlin-Systems.ipynb
@@ -385,7 +385,7 @@
     "from merlin.systems.triton import convert_df_to_triton_input\n",
     "import tritonclient.grpc as grpcclient\n",
     "\n",
-    "inputs = convert_df_to_triton_input(inf_workflow.input_schema.column_names, ten_examples, grpcclient.InferInput)\n",
+    "inputs = convert_df_to_triton_input(inf_workflow.input_schema, ten_examples, grpcclient.InferInput)\n",
     "\n",
     "outputs = [\n",
     "    grpcclient.InferRequestedOutput(col)\n",
