--- a/examples/Serving-An-Implicit-Model-With-Merlin-Systems.ipynb
+++ b/examples/Serving-An-Implicit-Model-With-Merlin-Systems.ipynb
@@ -87,12 +87,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import nvtabular as nvt\n",
     "import numpy as np\n",
     "from merlin.schema.tags import Tags\n",
     "from merlin.models.implicit import BayesianPersonalizedRanking\n",
     "\n",
-    "from merlin.datasets.entertainment import get_movielens\n",
+    "from merlin.datasets.entertainment import get_movielens\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b756a12f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ensemble_export_path = os.environ.get(\"OUTPUT_DATA_DIR\", \"ensemble\")\n",
+    "USE_GPU = bool(int(os.environ.get(\"USE_GPU\", \"1\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c10a993",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "train, _ = get_movielens(variant='ml-100k')\n",
     "\n",
@@ -136,7 +157,7 @@
     }
    ],
    "source": [
-    "model = BayesianPersonalizedRanking(use_gpu=True)\n",
+    "model = BayesianPersonalizedRanking(use_gpu=USE_GPU)\n",
     "model.fit(train_transformed)"
    ]
   },
@@ -216,10 +237,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_path = 'ensemble'\n",
-    "\n",
     "ensemble = Ensemble(inf_ops, inf_workflow.input_schema)\n",
-    "ensemble.export(export_path);"
+    "ensemble.export(ensemble_export_path);"
    ]
   },
   {
@@ -363,7 +382,7 @@
     }
    ],
    "source": [
-    "ten_examples = train.compute()['user_id'].sample(10).sort_values().to_frame().reset_index(drop=True)\n",
+    "ten_examples = train.compute()['user_id'].unique().sample(10).sort_values().to_frame().reset_index(drop=True)\n",
     "ten_examples"
    ]
   },
@@ -431,7 +450,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert np.allclose(predictions_from_triton, local_predictions)"
+    "np.testing.assert_allclose(predictions_from_triton, local_predictions)"
    ]
   },
   {
