--- a/examples/Serving-Ranking-Models-With-Merlin-Systems.ipynb
+++ b/examples/Serving-Ranking-Models-With-Merlin-Systems.ipynb
@@ -1074,7 +1074,7 @@
    "source": [
     "# send request to tritonserver\n",
     "with grpcclient.InferenceServerClient(\"localhost:8001\") as client:\n",
-    "    response = client.infer(\"ensemble_model\", inputs, request_id=\"1\", outputs=outputs)"
+    "    response = client.infer(\"executor_model\", inputs, request_id=\"1\", outputs=outputs)"
    ]
   },
   {
