--- a/examples/Serving-An-Implicit-Model-With-Merlin-Systems.ipynb
+++ b/examples/Serving-An-Implicit-Model-With-Merlin-Systems.ipynb
@@ -106,8 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ensemble_export_path = os.environ.get(\"OUTPUT_DATA_DIR\", \"ensemble\")\n",
-    "USE_GPU = bool(int(os.environ.get(\"USE_GPU\", \"1\")))"
+    "ensemble_export_path = os.environ.get(\"OUTPUT_DATA_DIR\", \"ensemble\")"
    ]
   },
   {
@@ -160,7 +159,7 @@
     }
    ],
    "source": [
-    "model = BayesianPersonalizedRanking(use_gpu=USE_GPU)\n",
+    "model = BayesianPersonalizedRanking()\n",
     "model.fit(train_transformed)"
    ]
   },
